14-Microservices-Canary-Deployments/kube-manifests/03-UserManagement-NodePort-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary-clb-service
  labels:
    app: nginx-canary-demo
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: LoadBalancer
  selector:
    app: nginx-canary-demo
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
